[package]
name = "faux-maps"
description = "Browser based map generation in Rust (WASM)"
version = "0.1.0"
authors = ["Menno Finlay-Smits <hello@menno.io>"]
repository = "https://github.com/mjs/faux-maps"
license = "MIT"
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
wasm-bindgen = "0.2.45"
noise = "0.7.0"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
  "console",
  "ImageData",
  "CanvasRenderingContext2d",
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
